# data_structures_in_c

./: .gitignore  CMakeLists.txt  data_structures_in_c.cbp  main.c
cmake/: FindCheck.cmake
list/: linked_list.c  linked_list.h
src/: CMakeLists.txt  main.c
src/common/: utils.c  utils.h
src/employee/: employee.c  employee.h
src/list/: common.h  linked_list.c  linked_list.h
src/queue/: queue.c  queue.h
src/stack/: stack.c  stack.h
src/tree/: tree.c  tree.h
tests/: CMakeLists.txt
